# sync

./: Cargo.toml  LICENSE
config/: languages.on  types.on
spoken/book/: english.on  espanol.on
spoken/booking/: english.on  espanol.on
src/: main.rs  sphere.rs  sync.rs
vocabulary/4/: book.on
vocabulary/5/: book.on
vocabulary/7/: booking.on
