[package]
name = "connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
indexmap = "1.8.0"

[dev-dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"